<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.i015114.taller.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- primero-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">
            <!---cabeza inicio-->
                <RelativeLayout
                    android:id="@+id/r_l_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_radius"

                    >

                <RelativeLayout
                    android:id="@+id/r_l_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/imgv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/foto"
                        android:scaleType="fitStart"
                        android:layout_margin="10dp"
                        />
                </RelativeLayout>
                <TextView
                    android:id="@+id/t_v_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hora"
                    android:layout_toRightOf="@+id/r_l_2"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/t_v_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/s"
                    android:layout_below="@+id/t_v_1"
                    android:layout_alignLeft="@+id/t_v_1"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/t_v_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:layout_alignLeft="@id/t_v_2"
                    android:layout_below="@id/t_v_2"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>
            <!---cabeza fin-->



            <!---segunda seccion inicio -->
                <RelativeLayout
                    android:id="@+id/r_l_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/r_l_1"
                    android:background="@drawable/borde2">
                    <!---llamadas-->
                    <RelativeLayout
                        android:id="@+id/r_l_3"
                        android:layout_width="110dp"
                        android:layout_height="35dp">
                        <TextView
                            android:id="@+id/t_v_4"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_v_4"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/t_v_5"
                            android:layout_below="@id/t_v_4"/>

                    </RelativeLayout>
                    <!---mensajes-->
                    <RelativeLayout
                        android:id="@+id/r_l_5"
                        android:layout_width="110dp"
                        android:layout_height="35dp"
                        android:layout_toRightOf="@+id/r_l_3">

                        <TextView
                            android:id="@+id/t_v_7"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_v_6"/>
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/t_v_7"
                            android:layout_below="@id/t_v_7"/>

                    </RelativeLayout>
                    <!---notificaciones-->
                    <RelativeLayout
                        android:id="@+id/r_l_6"
                        android:layout_width="115dp"
                        android:layout_height="35dp"
                        android:layout_toRightOf="@id/r_l_5">

                        <TextView
                            android:id="@+id/t_v_8"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_v_8"/>
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/t_v_9"
                            android:layout_below="@id/t_v_8"/>

                    </RelativeLayout>
                </RelativeLayout>
            <!---segunda seccion fin -->


            <!---tercera seccion inicio-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/r_l_7"
                    android:background="@drawable/borde"
                    >
                    <!--camara-->
                    <RelativeLayout
                        android:id="@+id/r_l_8"
                        android:layout_width="25dp"
                        android:layout_height="20dp"
                        android:background="@color/c3"
                        android:layout_margin="15dp">

                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="10dp"
                            android:src="@drawable/camara"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                    <!--fotos-->
                    <RelativeLayout
                        android:id="@+id/r_l_9"
                        android:layout_width="25dp"
                        android:layout_height="20dp"
                        android:background="@color/c3"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@+id/r_l_8">

                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="10dp"
                            android:src="@drawable/icons8_image_filled_50"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                    <!--bateria-->
                    <RelativeLayout
                        android:layout_width="250dp"
                        android:layout_height="40dp"
                        android:layout_toRightOf="@id/r_l_9"
                        android:layout_margin="15dp"
                        android:background="@color/c4">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_v_10"
                            android:textColor="@android:color/white"
                            android:layout_centerInParent="true"
                            android:textSize="10dp"
                            />

                    </RelativeLayout>

                </RelativeLayout>

            <!---tercera seccion inicio-->





            </RelativeLayout>















        </LinearLayout>

    </ScrollView>



</android.support.design.widget.CoordinatorLayout>
